Update 26/11/2021. Add method to saveOrder to DataBase, add button logout and delete some html-page